--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
+    "serverless-http": "^3.2.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
